# blender-render-control

./: .gitignore  Makefile  app.go  render_all_cameras.py  sync.sh
Android/: build.gradle
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/java/codes/ulbricht/blenderrendercontrolapp/: BlenderRenderProgressService.kt  MainActivity.kt  MainView.kt  SettingsActivity.kt
Android/app/src/main/java/codes/ulbricht/blenderrendercontrolapp/blender/: BlenderActivity.kt  (+4 more)
Android/app/src/main/res/values/: colors.xml  ids.xml  strings.xml  styles.xml
Android/gradle/wrapper/: gradle-wrapper.properties
app/: Flags.go
config/: Flags.go
gui/: CMakeLists.txt  Messages.sh
gui/doc/: CMakeLists.txt  index.docbook
gui/icons/: CMakeLists.txt  sc-apps-gui.svgz
gui/src/: AppSettings.kcfg  AppSettings.kcfgc  CMakeLists.txt  MainView.cpp  MainView.h  MainView.ui  MainWindow.cpp  MainWindow.h  codes.ulbricht.imanuel.blender-render-control-center.appdata.xml  codes.ulbricht.imanuel.blender-render-control-center.desktop  guiSettings.kcfg  guiSettings.kcfgc  guiui.rc  guiwindow.cpp  guiwindow.h  main.cpp  mainView.ui  org.example.gui.appdata.xml  org.example.gui.desktop  settings.ui
gui/src/blender/: BlenderClient.cpp  BlenderClient.h
gui/src/logging/: LogClient.cpp  LogClient.h
gui/src/nextcloud/: BlenderClient.cpp  BlenderClient.h  NextcloudClient.cpp  NextcloudClient.h
gui/src/queue/: QueueClient.cpp  QueueClient.h
gui/src/types/: File.cpp  File.h  QueueEntry.h
processing/: ListFiles.go  NextcloudFileSync.go  ProcessQueue.go
server/: Config.go  NextcloudFileSync.go  ProcessQueue.go  app.go  blender-render-control.service  config.server.yml.example  render_all_cameras.py  server.go
server/blender/: Client.go  Connection.go  Control.go  File.go  Handle.go  HandleHttp.go  ListFiles.go  Listen.go  ProcessQueue.go  Report.go  Response.go
server/config/: Config.go  Flags.go
server/log/: HandleSocket.go
server/nextcloud/: Client.go  Connection.go  Handle.go  HandleHttp.go  Listen.go  NextcloudFileSync.go  Report.go
server/processing/: ListFiles.go  Listen.go  NextcloudFileSync.go  ProcessQueue.go
server/queue/: File.go  HandleHttp.go  ProcessQueue.go  RenderSettings.go
server/socket/: Client.go  Connection.go  Control.go  Report.go  Response.go
server/utils/: Report.go
types/: Control.go  File.go  Response.go  WebsocketClient.go  WebsocketConnection.go
utils/: Report.go
(+5 files in other folders)
